--- a/package.json
+++ b/package.json
@@ -4,19 +4,39 @@
   "description": "Simple and small React components for showing and hiding children based on media queries",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel -d dist/ src/",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --trailing-comma es5 --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/berbaquero/react-responsive-utils.git"
   },
   "keywords": [
-    "react"
+    "react",
+    "stateful",
+    "responsive"
   ],
   "author": "Bernardo Baquero Stand",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/berbaquero/react-responsive-utils/issues"
   },
-  "homepage": "https://github.com/berbaquero/react-responsive-utils#readme"
+  "homepage": "https://github.com/berbaquero/react-responsive-utils#readme",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
+    "husky": "^0.13.3",
+    "lint-staged": "^3.4.2",
+    "prettier": "^1.3.1",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4"
+  }
 }
