--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-responsive-utils",
+  "name": "react-hide-show-utils",
   "version": "0.0.1",
   "description": "Simple and small React components for showing and hiding children based on media queries",
   "main": "dist/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/berbaquero/react-responsive-utils.git"
+    "url": "git+https://github.com/berbaquero/react-hide-show-utils.git"
   },
   "keywords": [
     "react",
@@ -26,9 +26,9 @@
   "author": "Bernardo Baquero Stand",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/berbaquero/react-responsive-utils/issues"
+    "url": "https://github.com/berbaquero/react-hide-show-utils/issues"
   },
-  "homepage": "https://github.com/berbaquero/react-responsive-utils#readme",
+  "homepage": "https://github.com/berbaquero/react-hide-show-utils#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
