--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "stateful",
     "responsive"
   ],
-  "author": "Bernardo Baquero Stand",
+  "author": "berbaquero <baquerober@gmail.com> (http://berbaquero.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/berbaquero/react-hide-show-utils/issues"
   },
   "homepage": "https://github.com/berbaquero/react-hide-show-utils#readme",
+  "dependencies": {
+    "prop-types": "^15.5.10"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
@@ -37,7 +40,11 @@
     "husky": "^0.13.3",
     "lint-staged": "^3.4.2",
     "prettier": "^1.3.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
   }
 }
