--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "responsive"
   ],
   "author": "berbaquero <baquerober@gmail.com> (http://berbaquero.com)",
+  "contributors": [
+    "Sinan Bolel <sinanbolel@gmail.com> (https://github.com/sbolel)"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/berbaquero/react-hide-show-utils/issues"
   },
   "homepage": "https://github.com/berbaquero/react-hide-show-utils#readme",
   "dependencies": {
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -40,11 +43,11 @@
     "husky": "^0.13.3",
     "lint-staged": "^3.4.2",
     "prettier": "^1.3.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
   }
 }
