--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.0",
     "husky": "^0.13.3",
+    "jest": "^22.0.4",
     "lint-staged": "^3.4.2",
     "prettier": "^1.3.1",
     "react": "^16.2.0",
