Added npm test script and pre-push hook for testing

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Simple and small React components for showing and hiding children based on media queries",
   "main": "dist/index.js",
   "scripts": {
+    "test": "jest",
     "prebuild": "rm -rf dist/ && mkdir dist/",
     "build": "babel -d dist/ src/",
     "prepublish": "npm run build",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepush": "npm run test"
   },
   "lint-staged": {
     "*.js": [
