--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "prebuild": "rm -rf dist/ && mkdir dist/",
     "build": "babel -d dist/ src/",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "precommit": "lint-staged",
     "prepush": "npm run test"
   },
