--- a/package.json
+++ b/package.json
@@ -3,57 +3,44 @@
   "version": "0.3.4",
   "description": "Simple and small React components for showing and hiding children based on media queries",
   "main": "dist/index.js",
+  "umd:main": "dist/react-hide-show-utils-ts.umd.production.js",
+  "module": "dist/react-hide-show-utils-ts.es.production.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "jest",
-    "prebuild": "rm -rf dist/ && mkdir dist/",
-    "build": "babel -d dist/ src/",
-    "prepublishOnly": "npm run build",
-    "precommit": "lint-staged",
-    "prepush": "npm run test"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --single-quote --trailing-comma es5 --write",
-      "git add"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/berbaquero/react-hide-show-utils.git"
-  },
-  "keywords": [
-    "react",
-    "stateful",
-    "responsive"
-  ],
-  "author": "berbaquero <baquerober@gmail.com> (http://berbaquero.com)",
-  "contributors": [
-    "Sinan Bolel <sinanbolel@gmail.com> (https://github.com/sbolel)"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/berbaquero/react-hide-show-utils/issues"
-  },
-  "homepage": "https://github.com/berbaquero/react-hide-show-utils#readme",
-  "dependencies": {
-    "prop-types": "^15.6.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.0",
-    "husky": "^0.14.3",
-    "jest": "^23.5.0",
-    "lint-staged": "^7.2.2",
-    "prettier": "^1.3.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "prebuild": "yarn test"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
+    "react": ">=16"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "pre-push": "yarn test"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.12",
+    "@types/react": "^16.8.16",
+    "@types/react-dom": "^16.8.4",
+    "husky": "^2.2.0",
+    "prettier": "^1.17.0",
+    "pretty-quick": "^1.10.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "tsdx": "^0.5.7",
+    "tslib": "^1.9.3",
+    "typescript": "^3.4.5"
   }
 }
