--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-hide-show-utils",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Simple and small React components for showing and hiding children based on media queries",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "prebuild": "rm -rf dist/ && mkdir dist/",
