Update homepage url

--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
   "bugs": {
     "url": "https://github.com/berbaquero/react-hide-show-utils/issues"
   },
-  "homepage": "https://berbaquero.com/react-hide-show-utils/"
+  "homepage": "https://react-hide-show-utils.berbaquero.com/"
 }
