Test before versioning + Build before publishing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "prebuild": "yarn test"
+    "preversion": "yarn test",
+    "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
     "react": ">=16"
