--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-hide-show-utils",
   "author": "Bernardo Baquero Stand <baquerober@gmail.com> (https://berbaquero.com)",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Simple and small React components for showing and hiding children based on media queries",
   "license": "MIT",
   "main": "dist/index.js",
@@ -62,6 +62,5 @@
   "bugs": {
     "url": "https://github.com/berbaquero/react-hide-show-utils/issues"
   },
-  "homepage": "https://react-hide-show-utils.berbaquero.com/",
-  "dependencies": {}
+  "homepage": "https://react-hide-show-utils.berbaquero.com/"
 }
